--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "author": "Red Hat Training",
   "license": "ASL",
+  "scripts": {
+	"start": "node app.js"
+  },	
   "dependencies": {
-    "express": "~4.14.2",
+    "express": "4.14.x",
     "html-errors": "latest"
   }
 }
